# kudo-cards

./: .eslintrc.json  .gitignore  .kudo-cards.ini.example  CLI-README.md  MANIFEST.in  README.md  docker-compose.yml  docker-entrypoint.sh  next.config.mjs  package.json  prettierignore.txt  prettierrc.cjs  pyproject.toml
kudo_cards_cli/: __init__.py  auth.py  main.py
src/: middleware.ts
src/app/: global.d.ts  globals.css  layout.module.css  layout.tsx  page.tsx
src/app/(root)/: layout.tsx  page.tsx
src/app/(root)/create-card/: page.tsx
src/app/api/config/: route.ts
src/app/api/kudo-cards/: route.ts
src/app/lib/actions/: kudoCard.actions.ts
src/app/lib/models/: kudoCard.models.ts
src/app/lib/validations/: kudoCard.validations.ts
src/components/Atoms/Button/: Button.module.css  Button.tsx
src/components/Atoms/CopyToClipboard/: CopyToClipboard.module.css  CopyToClipboard.tsx
src/components/Atoms/GifPicker/: GifPicker.module.css  GifPicker.tsx
src/components/Atoms/Headings/: Headings.module.css  Headings.tsx
src/components/Atoms/HeartPlus/: HeartPlus.module.css  HeartPlus.tsx
src/components/Atoms/Input/: Input.module.css  Input.tsx
src/components/Atoms/Loading/: Loading.module.css  Loading.tsx
src/components/Atoms/LoginPopup/: LoginPopup.tsx
src/components/Atoms/StrongText/: StrongText.tsx
src/components/Atoms/Typography/: Typography.module.css  Typography.tsx
src/components/Molecules/BoardHeader/: BoardHeader.module.css  BoardHeader.tsx
src/constants/: index.js
src/context/: AuthContext.tsx
src/firebase/: firebase.ts
(+34 files in other folders)
